--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Courgette', cursive, sans-serif;
 }
 
 body{
-    background-color: aqua;
+    /* background-color: #2f5d62; */
     font-size: 16px;
+
+
+    background-color: #161925;
+    color: #AFC1D5;
 }
 
 .header{
     border-bottom-style: solid;
+    border-bottom-color: #CBF7ED;
     padding: 40px 0 5px 0;
 }
 
@@ -39,7 +47,7 @@ span #formatter{
 }
 
 #formHolder{   
-    background-color: rgba(246, 246, 246, 0.6);
+    background-color: rgba(22, 25, 37, 1.0);
     border-radius: 8px;
     width: 300px;
     margin-top: 80px;
@@ -64,8 +72,12 @@ form{
 #submitBook{
     width: 150px;
     height: 40px;
-    background-color: aquamarine;
+    background-color: rgba(175, 193, 213, 0.2);
     align-self: center;
+    color: white;
+    font-size: 20px;
+    border-color: #CBF7ED;
+    border-radius: 5px;
 }
 
 #closeOverlay{
@@ -76,6 +88,10 @@ form{
     width: 30px;
     position: relative;
     align-self: flex-end;
+    border-color: #CBF7ED;
+    border-radius: 5px;
+    background-color: rgba(175, 193, 213, 0.2);
+    color: white;
 }
 
 #readInput {
@@ -108,21 +124,38 @@ form{
 /* Styling for the data */
 
 #newBookButton {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-style: none;
-    padding: 15px;
+    /* border-style: none; */
+    color: white;
+    border-radius: 8px;
+    padding: 20px;
+    font-size: 20px;
+    margin-top: 100px;
+    background-color: rgba(175, 193, 213, 0.2);
+    border-color: #CBF7ED;
 }
 
 #newBookButton:hover{
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+.data{
+    /* background-color: #17253B; */
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
 .data h2{
-    padding-top: 20px;
+    padding: 20px 0 20px 0;
+    font-size: 30px;
 }
 
 table{
     text-align: left;
+    width: 200px;
+    font-size: 20px;
 }
 
 tr{
@@ -136,14 +169,83 @@ td{
 
 /* To hold the books */
 .bookWrapper{
+    width: 90%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, auto));
+    grid-template-columns: repeat(auto-fill, 350px);
+    grid-template-rows: repeat(auto-fill, 400px);
     grid-gap: 50px;
+    justify-self: center;
+    justify-content: center;
+    padding-bottom: 30px;
 }
 
 /* Styling for the books */
 .book{
-    background-color: blueviolet;
-    height: 300px;
-    width: 300px;
+    background-color: rgba(203, 247, 237, 0.3);
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #CBF7ED;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    /* align-items: baseline; */
+    /* justify-items: baseline; */
+    /* position: relative; */
+    overflow: auto;
+    /* flex-basis: 100%; */
+    height: 400px;
+    justify-content: space-between;
 }
+
+.book h3{
+    font-size: 30px;
+    width: 80%;
+    align-self: center;
+    border-bottom: solid rgba(175, 193, 213, 0.4);
+    /* border-bottom: solid rgba(17, 105, 86, 0.5); */
+    text-align: center;
+    /* height: 25%; */
+}
+
+.book p{
+    font-size: 20px;
+    padding: 10px;
+}
+
+
+.book button{
+    background-color: rgba(175, 193, 213, 0.2);
+    border-color: #CBF7ED;
+    border-style: none;
+}
+
+.book button:hover{
+    background-color: rgba(175, 193, 213, 0.6);
+}
+
+.book .delButton{
+    padding: 10px;
+    border-style: none;
+    align-self: flex-end;
+}
+
+.book .updateButton{
+    padding: 10px;
+    /* margin-top: 40px; */
+    font-size: 15px;
+    width: 60%;
+    /* position: absolute;
+    bottom: 0;
+    right: 0; */
+    align-self: flex-end; 
+    justify-self: flex-end;
+}
+
+
+/* @media (max-width: 1050px){
+    .wrapper is a grid
+    
+    .data{
+        order: 1
+    }
+} */
